--- a/content/index.haml
+++ b/content/index.haml
@@ -1,7 +1,9 @@
-%ul
-  %li
-    Blog Post 1
-  %li
-    Blog Post 2
-  %li
-    Blog Post 3
+#greeting
+  :markdown
+    Hello, I'm [Zameer](/about) and this is my personal website.
+
+    I'm a [uWaterloo](http://uwaterloo.ca) Software Engineering student from Toronto, Canada.
+
+    I blog here, showcase my projects and show off my résumé.
+
+    Feel free to drop me an [email](mailto:hi@zameermanji.com).
