--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -5,7 +5,11 @@
     %title= "#{@item[:title]}"
     %link{:href => "/assets/stylesheets/reset.css", :rel => "stylesheet"}
     %link{:href => "/assets/stylesheets/base.css", :rel => "stylesheet"}
+
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Serif", :rel => 'stylesheet'}
+
+    %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
+    %script{:src => "/assets/javascripts/last_tweet.js"}
 
   %body
     .wrap
