Add StackOverflow icon

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -33,14 +33,20 @@
 
       %footer
         %p
-          I'm also on a few other sites on the internet:
-        %ul
-          %li
+          Elsewhere on the Internet:
+        .three-col
+          #twitter-col
             %a.twitter-img{:href => "http://www.twitter.com/zmanji"}
               Twitter
-          %li
+            %p
+              this is a tweet
+          #github-col
             %a.github-img{:href => "http://www.github.com/zmanji"}
               GitHub
-          %li
+            %p
+              this is a comit
+          #stackoverflow-col
             %a.stackoverflow-img{:href => "http://stackoverflow.com/users/2874/zameer-manji"}
               StackOverflow
+            %p
+              lol
