--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -47,8 +47,7 @@ body {
 }
 
 footer {
-  @include horizontal-list;
-  border-top: 1px solid darken($font-color, 50)
+  border-top: 1px solid darken($font-color, 50);
 }
 
 .twitter-img {
@@ -59,4 +58,26 @@ footer {
 .github-img {
   @include replace-text-with-dimensions("github.png");
   display: block;
+}
+
+.stackoverflow-img {
+  @include replace-text-with-dimensions("stackoverflow.png");
+  display: block;
+}
+
+#twitter-col {
+  float: left;
+  width: 30%;
+  border-right: 1px solid black;
+}
+
+#github-col{
+  display: inline;
+  width: 30%;
+}
+
+#stackoverflow-col {
+  float: right;
+  width: 30%;
+  border-left: 1px solid black;
 }
