--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -38,8 +38,8 @@
           #twitter-col
             %a.twitter-img{:href => "http://www.twitter.com/zmanji"}
               Twitter
-            %p
-              this is a tweet
+            %p#tweet-text
+              Loading Tweet ...
           #github-col
             %a.github-img{:href => "http://www.github.com/zmanji"}
               GitHub
