--- a/content/index.haml
+++ b/content/index.haml
@@ -2,7 +2,7 @@
   :markdown
     Hello, I'm [Zameer](/about) and this is my personal website.
 
-    I'm a [uWaterloo](http://uwaterloo.ca) Software Engineering student from Toronto, Canada.
+    I'm a [uWaterloo](http://uwaterloo.ca) Software Engineering student from Toronto.
 
     I blog here, showcase my projects and show off my résumé.
 
