Add time to tweet text.

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -9,7 +9,9 @@
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Serif", :rel => 'stylesheet'}
 
     %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
+    %script{:src => "/assets/javascripts/vendor/jquery.timeago.js"}
     %script{:src => "/assets/javascripts/last_tweet.js"}
+
 
   %body
     .wrap
