Autolink tweet text.

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -10,6 +10,7 @@
 
     %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
     %script{:src => "/assets/javascripts/vendor/jquery.timeago.js"}
+    %script{:src => "https://raw.github.com/twitter/twitter-text-js/master/pkg/twitter-text-1.4.9.js"}
     %script{:src => "/assets/javascripts/last_tweet.js"}
 
 
