--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -47,9 +47,11 @@ body {
   text-align: center;
 }
 
+$col-height: 200px;
 footer {
   border-top: 1px solid darken($font-color, 50);
   padding-top: 5px;
+
 
   text-align: center;
 
@@ -62,6 +64,7 @@ footer {
     width: 30%;
     border-right: 1px solid lighten($font-color, 50);
     padding-right: 2%;
+    height: $col-height;
   }
 
   #github-col{
@@ -69,6 +72,7 @@ footer {
     width: 30%;
     padding-left: 2%;
     padding-right: 2%;
+    height: $col-height;
   }
 
   #stackoverflow-col {
@@ -76,6 +80,7 @@ footer {
     width: 30%;
     border-left: 1px solid lighten($font-color,50);
     padding-left: 2%;
+    height: $col-height;
   }
 }
 
