--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -33,7 +33,7 @@
             %li
               = link_to('About', '/about/')
             %li
-              Resume
+              = link_to('Resume', '/resume/')
             %li
               Projects
 
