Good enough for now.

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -29,13 +29,13 @@
         %nav
           %ul
             %li
-              Blog
+              = link_to('Blog', '/blog/')
             %li
               = link_to('About', '/about/')
             %li
               = link_to('Resume', '/resume/')
             %li
-              Projects
+              = link_to('Projects', '/projects/')
 
       #content
         %article
