--- a/content/index.haml
+++ b/content/index.haml
@@ -3,11 +3,11 @@ title: Zameer Manji
 ---
 #greeting
   :markdown
-    Hello, I'm [Zameer](/about) and this is my personal website.
+    Hello, I'm [Zameer](/about/) and this is my personal website.
 
     I'm a [uWaterloo](http://uwaterloo.ca) Software Engineering student from Toronto.
 
-    I blog here, showcase my projects and show off my résumé.
+    I [blog](/blog/) here, showcase my projects and show off my [résumé](/resume/).
 
     Feel free to drop me an [email](mailto:hi@zameermanji.com).
 
