--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -33,7 +33,7 @@
             %li
               = link_to('About', '/about/')
             %li
-              = link_to('Resume', '/resume/')
+              = link_to('Résumé', '/resume/')
             -# %li
             -#   = link_to('Projects', '/projects/')
 
