--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -10,7 +10,7 @@
     %link{:href => "/assets/stylesheets/base.css", :rel => "stylesheet"}
     %link{:href => "/assets/stylesheets/solarized.css", :rel => 'stylesheet'}
 
-    %link{:href => "http://fonts.googleapis.com/css?family=Droid+Serif", :rel => 'stylesheet'}
+    %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans|Inconsolata", :rel => 'stylesheet'}
 
     <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
 
