Switch to ruby 1.9.3 and be explicit about font size.

--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -16,6 +16,7 @@ body {
   color: $font-color;
   background-color: $background-color;
   text-rendering: optimizeLegibility;
+  @include adjust-font-size-to(16px);
 }
 
 #top {
