--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -8,7 +8,7 @@
       %title= "Zameer Manji"
     %link{:href => "/assets/stylesheets/reset.css", :rel => "stylesheet"}
     %link{:href => "/assets/stylesheets/base.css", :rel => "stylesheet"}
-    %link{:href => "/assets/stylesheets/solarized.css", :rel => 'stylesheet'}
+    %link{:href => '/assets/stylesheets/native.css', :rel => 'stylesheet'}
 
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans|Inconsolata", :rel => 'stylesheet'}
 
