--- a/content/assets/stylesheets/native.scss
+++ b/content/assets/stylesheets/native.scss
@@ -1,4 +1,5 @@
 .highlight { background-color: #404040;
+            overflow-x: auto;
 .c { color: #999999; font-style: italic } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .g { color: #d0d0d0 } /* Generic */
