--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -12,7 +12,8 @@
 
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans|Inconsolata", :rel => 'stylesheet'}
 
-    <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
+    <link rel='icon' href='/favicon.ico' sizes="16x16" type="image/vnd.microsoft.icon">
+
 
     %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
     %script{:src => "http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.2.2/underscore-min.js"}
