Gray background on inline code snippets.

--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -196,3 +196,7 @@ blockquote {
   border-left: 2px solid gray;
   @include adjust-font-size-to(18px);
 }
+
+code {
+  background-color: #DDDDDD;
+}
