--- a/content/resume.haml
+++ b/content/resume.haml
@@ -1,13 +1,10 @@
----
-layout: none
----
-
 !!! 5
 %html{:lang => "en"}
   %head
     %title Zameer Manji
     %style
       :sass
+        //stolen from jamie
         // ------------ Begin Reset -------------
         body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td
           margin: 0
@@ -163,12 +160,11 @@ layout: none
       .summary
         :markdown
           My Manifesto
-          ------------
-          I like making good software. I like designing, creating specifications, testing and solving the core problem. I like documenting my software, automating inefficiencies
-          and reviewing code. I want my code to be used my millions of people. I want to create solutions to big problems. I want to work with hardware at the lowest
-          levels. I want to work with large distributed systems. I don't want to create web sites for the rest of my life. I want to work on things that are hard. I  don't care about
-          social media, etc. I want to use vim at work. I care about disrupting the music industry, personal finance, telecommunications and education. If you can satisfy some of the things I want, please schedule
-          and interview.
+          -----------------
+          I enjoy creating software. I like solving the problem, designing a solution, implementing the solution and testing it.
+          I want my software to solve big problems and I want my software to be used by many people. I'm good at web development but I
+          don't want to do it for the rest of my life. I have interests in low level programming and scalable systems.
+          I have big plans about disrupting the music industry, finance industry and telecommunications.
 
       :markdown
         ## Work Experience
