Added latex filter and basic LaTeX resume.

--- a/content/index.haml
+++ b/content/index.haml
@@ -7,7 +7,7 @@ title: Zameer Manji
 
     I'm a [uWaterloo](http://uwaterloo.ca) Software Engineering student from Toronto.
 
-    I [blog](/blog/) here and show off my [résumé](/resume/).
+    I [blog](/blog/) here and show off my [résumé](/resume.pdf).
 
     Feel free to drop me an [email](mailto:hi@zameermanji.com).
 
