--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -34,7 +34,7 @@
             %li
               = link_to('About', '/about/')
             %li
-              = link_to('Résumé', '/resume/')
+              = link_to('Résumé', '/resume.pdf')
 
       #content
         %article{:id => @item[:wrapper_id]}
