--- a/content/index.haml
+++ b/content/index.haml
@@ -1,34 +1,9 @@
----
-title: Zameer Manji
----
 #greeting
   :markdown
-    Hello, I'm [Zameer](/about/) and this is my personal website.
+    Hello, I'm [Zameer](/about/) and this is my website.
 
     I'm a [uWaterloo](http://uwaterloo.ca) Software Engineering student from Toronto.
 
     I [blog](/blog/) here and show off my [résumé](/resume.pdf).
 
     Feel free to drop me an [email](mailto:hi@zameermanji.com).
-
-- content_for :footer do
-  %p
-    Elsewhere on the Internet:
-  .three-col
-    #twitter-col
-      %a.twitter-img{:href => "http://www.twitter.com/zmanji"}
-        Twitter
-      %p#tweet-text
-        Loading Tweet ...
-    #github-col
-      %a.github-img{:href => "http://www.github.com/zmanji"}
-        GitHub
-      %p#github-text
-        Loading Repositories ...
-    #stackoverflow-col
-      %a.stackoverflow-img{:href => "http://stackoverflow.com/users/2874/zameer-manji"}
-        StackOverflow
-      %p#stackoverflow-text
-        Loading Stats ...
-
-  %br
