--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -11,7 +11,7 @@ $font-color: black;
 $page-width: 750px;
 
 body {
-  font-family: 'Droid Serif', serif;
+  font-family: 'Lora','Droid Serif', serif;
   color: $font-color;
   background-color: white;
   text-rendering: optimizeLegibility;
