--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -33,18 +33,15 @@ a:visited, a:hover {
 
 h1 {
   @include adjust-font-size-to(40px);
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
+  border-bottom: 1px solid darken($font-color, 50);
 }
 
 h2 {
   @include adjust-font-size-to(30px);
-  margin-bottom: 0.5em;
 }
 
 h3 {
   @include adjust-font-size-to(24px);
-  margin-bottom: 0.5em;
 }
 
 footer {
