--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -107,9 +107,13 @@ ul.post-list {
 // Pygments code boxes
 .highlight {
   padding: 10px;
-  margin: 20px 0;
   overflow-x: auto;
   @include border-radius(10px);
+  @include adjust-font-size-to(18px);
+  pre {
+    word-wrap: normal;
+    white-space: pre;
+  }
 }
 
 .posted {
