--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -19,7 +19,7 @@
     :javascript
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-20388638-1']);
-      _gaq.push(['_setDomainName', '.zameermanji.com']);
+      _gaq.push(['_setDomainName', 'zameermanji.com']);
       _gaq.push(['_trackPageview']);
 
       (function() {
