--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -49,6 +49,26 @@
           - if @item[:created_at]
             .posted= "Created On: #{@item[:created_at].strftime("%B %d %Y")}"
         = yield
+      - if @item[:kind] == 'article'
+        %hr
+        #disqus_thread
+        :javascript
+          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+          var disqus_shortname = 'zmanji'; // required: replace example with your forum shortname
+          var disqus_developer = 0;
+          var disqus_identifier = '#{@item.identifier}';
+          var disqus_url = '#{url_for(@item)}';
+          var disqus_title = '#{@item[:title]}';
+
+          /* * * DON'T EDIT BELOW THIS LINE * * */
+          (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+          })();
+        %noscript
+          Please enable JavaScript to view the
+          %a{:href => "http://disqus.com/?ref_noscript"} comments powered by Disqus.
 
     %footer
       = content_for(@item, :footer)
