--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -47,7 +47,10 @@
           - if @item[:title]
             %h1= @item[:title]
           - if @item[:created_at]
-            .posted= "Created On: #{@item[:created_at].strftime("%B %d %Y")}"
+            .posted
+              Created On:
+              %time{:datetime => @item[:created_at].strftime("%F"), :pubdate => true}
+                = "#{@item[:created_at].strftime("%B %d %Y")}"
         = yield
       - if @item[:kind] == 'article'
         %hr
